k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-web-app
  namespace: python-flask-web-app
spec:
  type: ClusterIP  # This can be NodePort or LoadBalancer if you want external access
  ports:
    - port: 80      # Port to expose the service
      targetPort: 80  # Port on which your app is running
  selector:
    app: python-flask-web-app
