k8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-web-app-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"  # This is for AWS Load Balancer
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - host: pythonwebapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-web-app
                port:
                  number: 80
